--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 }
 </style>
 <meta charset="utf-8">
-
+<title>Urgently needed materials</title>
 <center>
 <div style="background-color: black;width: 95%;opacity: 0.7;color:aliceblue">
 <h1>Urgently needed materials<h3><a  style="color: blue;" href="./albye.html"> بالعربية </a></h3></h1>
