--- a/albye.html
+++ b/albye.html
@@ -38,6 +38,7 @@
 }
 </style>
 <meta charset="utf-8">
+<title>  في حاجة ماسة إلى المواد</title>
 <center>
 <div style="background-color: black;width: 95%;opacity: 0.7;color:aliceblue">
     <h1> في حاجة ماسة إلى المواد  <h3><a  style="color: blue;"  href="./english.html">English</a></h3></h1>
